Fix vertical spacing
Makes sure headings get correct margins now they’re nested in a wrapper

--- a/public/index.css
+++ b/public/index.css
@@ -104,12 +104,24 @@ h5 {
 	--icon-size: 1rem;
 }
 
+.heading-wrapper:not(:first-child) {	
+	margin-block: 0;
+}
+
 .heading-wrapper > * {
-	display: inline;
+	display: inline-block;
+	margin-bottom: 0;
+}
+
+.heading-wrapper:not(:first-child) :is(h2, h3) {
+	margin-top: 3rem;
+}
+
+.heading-wrapper:not(:first-child) :is(h4, h5, h6) {
+	margin-top: 2rem;
 }
 
 .heading-wrapper > .anchor-link {
-	display: inline-block;
 	position: relative;
 	inset-inline-start: .75rem;
 	width: var(--icon-size);
